...
    </LinearLayout>

    <!-- Leave Event Button -->


    <Button
        android:id="@+id/eventInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/purple_500"
        android:drawablePadding="8dp"
...
